--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Bayard Walsh"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "University of Chicago Graduate and Computer Vision Researcher at University of Chicago Medicine"
+  location         : "Chicago, Il"
+  employer         : "University of Chicago"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "bkwalsh@uchicago.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
