--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "https://www.linkedin.com/in/bayard-walsh-9320a31a8/"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
