--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Bayard Walsh"
   pronouns         : # example: "she/her"  
-  bio              : "University of Chicago Graduate and Computer Vision Researcher at University of Chicago Medicine"
-  location         : "Chicago, Il"
-  employer         : "University of Chicago"
+  bio              : "University of Chicago Computer Science Graduate and Computer Vision Researcher at University of Chicago Medicine"
+  location         : "Chicago, IL"
+  employer         : "University of Chicago Medicine"
   uri              : # URL
   email            : "bkwalsh@uchicago.edu" 
 
@@ -43,12 +43,12 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "bkwalsh"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
