--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "headshot.png"
+  avatar           : "profile.png"
   name             : "Bayard Walsh"
   pronouns         : # example: "she/her"  
   bio              : "University of Chicago Computer Science Graduate and Computer Vision Researcher at University of Chicago Medicine"
