--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Bayard Walsh"
   pronouns         : # example: "she/her"  
-  bio              : "University of Chicago Computer Science Graduate and Computer Vision Researcher at University of Chicago Medicine"
+  bio              : "Computer Vision Researcher at University of Chicago Medicine"
   location         : "Chicago, IL"
   employer         : "University of Chicago Medicine"
   uri              : # URL
